# bachelors-thesis

./: .gitignore  CMakeLists.txt  README.md  README.txt  experiments.sh  experiments_single_stage.sh  experiments_two_stage.sh  main.cpp  main.h
2stageNPN-CEamp/: ce_amplifier.sch  output.net
NPN-CEamp/: amp.net  ce_amplifier.sch  sim.txt
experiments/: results.txt
experiments/mu1/lambda1/plus/bestFit/1/: EvolutionOutput.txt
experiments/mu1/lambda1/plus/bestFit/10/: EvolutionOutput.txt
experiments/mu1/lambda1/plus/bestFit/2/: EvolutionOutput.txt
experiments/mu1/lambda1/plus/bestFit/3/: EvolutionOutput.txt
experiments/mu1/lambda1/plus/bestFit/4/: EvolutionOutput.txt
experiments/mu1/lambda1/plus/bestFit/5/: EvolutionOutput.txt
experiments/mu1/lambda1/plus/bestFit/6/: EvolutionOutput.txt
experiments/mu1/lambda1/plus/bestFit/7/: EvolutionOutput.txt
experiments/mu1/lambda1/plus/bestFit/8/: EvolutionOutput.txt
experiments/mu1/lambda1/plus/bestFit/9/: EvolutionOutput.txt
experiments/mu1/lambda1/plus/idealSine/1/: EvolutionOutput.txt
experiments/mu1/lambda1/plus/idealSine/10/: EvolutionOutput.txt
experiments/mu1/lambda1/plus/idealSine/2/: EvolutionOutput.txt
experiments/mu1/lambda1/plus/idealSine/3/: EvolutionOutput.txt
experiments/mu1/lambda1/plus/idealSine/4/: EvolutionOutput.txt
experiments/mu1/lambda1/plus/idealSine/5/: EvolutionOutput.txt
experiments/mu1/lambda1/plus/idealSine/6/: EvolutionOutput.txt
experiments/mu1/lambda1/plus/idealSine/7/: EvolutionOutput.txt
experiments/mu1/lambda1/plus/idealSine/8/: EvolutionOutput.txt
experiments/two_stage_amp/: results.txt
presentation/: prezentace.tex  slide_generator.sh  transcript.txt
src/: Amplifier.cpp  Amplifier.h  ArgParser.cpp  ArgParser.h  Chromosome.cpp  Chromosome.h  Plotter.cpp  Plotter.h  Population.cpp  Population.h  Simulator.cpp  Simulator.h  main.cpp  main.h
thesis/: .tex  Makefile  preface.tex  projekt-01-kapitoly-chapters.tex  projekt.ptc  projekt.tex  thesis-01-kapitoly-chapters.tex  thesis-20-literatura-bibliography.bib  thesis-30-prilohy-appendices.tex  thesis.tex
thesis/chapters/: amplifiers-evaluation.tex  analog-amplifiers.tex  conclusion.tex  evolutionary-algorithms.tex  experiments.tex  implementation.tex  preface.tex
thesis/figures/: ce-amplifier-2stage.eps  ce-amplifier.eps
(+1465 files in other folders)
